# SkySegmentor

./: .coverage  .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirement.txt  requirements.txt  setup.py  vcon.py  vinfo.py
.github/workflows/: python-tests.yml
docs/: copy_pdf.sh
docs/source/: api.rst  api_coords.rst  api_groupfinder.rst  api_maths.rst  api_partition.rst  api_rotate.rst  api_utils.rst  conf.py  index.rst  requirements.txt  tutorials.rst  tutorials_advance.rst  tutorials_analysis.rst  tutorials_basics.rst
mapsplit/: __init__.py  coords.py  groupfinder.py  maths.py  partition.py  rotate.py
skysegmentor/: __init__.py  coords.py  groupfinder.py  maths.py  partition.py  rotate.py
