[build-system]
    build-backend="setuptools.build_meta"
    requires     =["numpy>=1.17.0", "setuptools>61.0.0", "wheel"]

[project]
    authors=[
        {name="Krishna Naidoo", email="krishna.naidoo.11@ucl.ac.uk"},
    ]
    classifiers=[
        "Development Status :: 4 - Beta",
        "Intended Audience :: Developers",
        "Intended Audience :: Science/Research",
        "Natural Language :: English",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Topic :: Scientific/Engineering :: Astronomy",
        "Topic :: Scientific/Engineering :: Mathematics",
        "Topic :: Scientific/Engineering",
    ]
    dependencies=[
        "numpy>=2.0",
        "healpy>=1.15.0",
    ]
    description="SkySegmentor: Splits a binary map into several regions using the binary space partition algorithm."
    dynamic=["version"]
    keywords=["astronomy", "partitioning", "skymaps"]
    license="MIT"
    license-files=["LICEN[CS]E.*"]
    maintainers=[{name="Krishna Naidoo", email="krishna.naidoo.11@ucl.ac.uk"}]
    name="skysegmentor"
    readme="README.md"
    requires-python=">=3.7"

[project.urls]
    "Bug Tracker"="https://github.com/knaidoo29/SkySegmentor/issues"
    Changelog    ="https://github.com/knaidoo29/SkySegmentor/blob/main/CHANGELOG.md"
    Documentation="https://skysegmentor.readthedocs.io/en/latest/"
    Homepage     ="https://github.com/knaidoo29/SkySegmentor"
    Repository   ="https://github.com/knaidoo29/SkySegmentor"

[project.optional-dependencies]
    dev=["black", "flake8", "ipython", "jupyter", "mypy"]
    docs=["numpydoc", "sphinx", "sphinx-rtd-theme"]
    test=[
        "nose",        # Keep if you still need it for legacy tests
        "pytest-cov",
        "pytest>=6.0",
    ]

[tool.setuptools.dynamic]
    version={file=["VERSION"]}

[tool.setuptools.packages.find]
    exclude=["build", "docs", "tests", "tutorials"]
    where  =["."]

[tool.setuptools]
    include-package-data=true

[tool.setuptools.package-data]
    "skysegmentor"=["*.json", "*.md", "*.txt"]

[tool.pytest.ini_options]
    addopts     ="-ra -q --cov=skysegmentor --cov-report=term-missing"
    python_files="test_*.py"
    testpaths   =["tests"]
